--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 	<body>
 		<header>
 			<div class="link-title">
-				<a href="./index.html">JavaScript Obfuscator</a>
+				<a href="./">JavaScript Obfuscator</a>
 			</div>
 		</header>
 		<main>
